methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:5: error: not found: value setCouleur
def b(c:Color,d:Color,e:Color,f:Color) {setCouleurBrosse(c);a();gauche();avance();gauche();avance();a();droite();avance();setCouleurBrosse(d);a();avance();droite();avance();a();avance();setCouleur(e);a()}
                                                                                                                                                                                          ^